--- a/style.css
+++ b/style.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 /* badge.css */
 .badge {
-  @apply inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-orange-300 focus:ring-offset-2;
+  @apply inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-[#096269] focus:ring-offset-2;
 }
 
 .badge-default {
-  @apply bg-orange-500 text-white border-transparent hover:bg-orange-600;
+  @apply bg-orange-500 text-[#096269] border-transparent hover:bg-orange-600;
 }
 .badge-soft-orange {
-  @apply bg-orange-100 text-orange-800 border-transparent hover:bg-orange-200;
+  @apply bg-orange-100 text-[#096269] border-transparent hover:bg-orange-200;
 }
 .badge-outline-orange {
-  @apply bg-transparent text-orange-700 border border-orange-300;
+  @apply bg-transparent text-[#096269] border border-[#096269];
 }
 .badge-outline-blue {
   @apply bg-transparent text-blue-700 border border-blue-300;
